# BareSVM

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: hv.rs  lib.rs  segments.rs  structs.rs  utils.rs  vmcb.rs  vmexit.rs  vmlaunch.asm  vmmcall.rs
src/handler/: mod.rs  vmmcall.rs
